--- a/init.p506.rc
+++ b/init.p506.rc
@@ -3,14 +3,22 @@ import init.qcom.rc
 
 on boot
 
-# sensors
-  mkdir /data/amit 0777 ami304d ami304d
-  chmod 0666 /data/amit/AMI306_Config.ini
-  chmod 0666 /data/amit/AMI306_Config2.ini
+    ## VIBRATOR
+    chmod 0660 /sys/class/timed_output/vibrator/amp
 
-  chown compass system /sys/bus/i2c/drivers/proximity_gp2ap/4-0044/enable
-  chmod 0660 /sys/bus/i2c/drivers/proximity_gp2ap/4-0044/enable
+    ## SENSOR
+	mkdir /data/amit 0777 ami304d ami304d
+	chmod 0666 /data/amit/AMI306_Config.ini
+    chmod 0666 /data/amit/AMI306_Config2.ini
 
+    ## PROXIMITY SENSOR
+	chown compass system /sys/bus/i2c/drivers/proximity_gp2ap/4-0044/enable
+	chmod 0660 /sys/bus/i2c/drivers/proximity_gp2ap/4-0044/enable
+
+    # BACKLIGHT
+    chmod 0664 /sys/class/leds/lcd-backlight/alc
+    chown system system /sys/devices/platform/mddi_hitachi_hvga.10/lcd_onoff
+    chmod 0664 /sys/devices/platform/mddi_hitachi_hvga.10/lcd_onoff
 
 service ami304d /system/bin/ami304d
     class main
